# cognitive_ai

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  README.md  activate_env.bat  activate_env.ps1  build_docs.bat  build_docs.ps1  check_status.py  check_trackers.py  cognitive_ai_theory.md  cognitive_ai_theory_full_conversation.md  environment.yml  init_project.ps1  pyproject.toml  requirements.txt  run_tests.py  setup.py  start_trackers.ps1  test_cognitive_tracker.py  test_interaction.py  test_tracker.py
core/: __init__.py  cognitive_field_system.py  environment.yml
core/acceleration/: acceleration_integration.py  cognitive_acceleration_tracker.py
core/adaptive/: interface_manager.py
core/analysis/: cognitive_patterns.py  cognitive_resonance.py  development_tracker.py  metacognitive_analyzer.py
core/context/: browser_context.py
core/dashboard/: dashboard_server.py
dashboard/: CHANGELOG.md  README.md  environment.yml  start_services.bat
docs/: CHANGELOG.md  Makefile  changes.json  conf.py  index.rst  installation.rst  optimization_recommendations.rst  project_status.rst  sample_interaction_log.jsonl
logs/: README.md
tests/: conftest.py  test_acceleration_tracker.py  test_cognitive_metrics.py  test_cognitive_tracker.py  test_cuda_operations.py  test_data_storage.py  test_gpu_monitor.py  test_interaction_tracker.py  test_metacognitive_analyzer.py
tools/: changelog_generator.py  code_metrics.py  detailed_metrics.py  install_service.ps1  performance_viz.py  structure_viz.py  verify_setup.py  watch_changes.ps1  watcher_config.json
(+27 files in other folders)
